--- a/recipe.html
+++ b/recipe.html
@@ -36,7 +36,7 @@
     <div class="img-container">
 
     <div class="img-div">
-        <img src="https://www.gutekueche.at/storage/media/recipe/106126/conv/wiener-schnitzel-default.jpg" alt="dinner">
+        <img src="schnitzel.jpg" alt="dinner">
     </div>
 
     </div>
